--- a/style.css
+++ b/style.css
@@ -24,8 +24,8 @@ body {
     width: 300px;
     padding: 25px 10px;
     border-radius: 30px;
-    border: 6px #20B2AA;
-    background-color: #00CED1
+    border: 6px #00CED1;
+    background-color: #008B8B;
     background-image: linear-gradient(147deg, #923cb5 0%, #000000 74%);    
 }
 
