--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body {
     border-radius: 30px;
     border: 6px #00CED1;
     background-color: #008B8B;
-    background-image: linear-gradient(147deg, #923cb5 0%, #000000 74%);    
+    background-image: linear-gradient(147deg,  #00CED1 0%, #008B8B 74%);    
 }
 
 
